--- a/res/layout/activity_main_l.xml
+++ b/res/layout/activity_main_l.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<LinearLayout android:id="@+id/panelInfo"
-              xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:tools="http://schemas.android.com/tools"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
@@ -126,8 +125,6 @@
             android:layout_height="match_parent"
             android:baselineAligned="false"
             android:orientation="vertical"
-            android:paddingBottom="16dp"
-            android:paddingRight="8dp"
             android:splitMotionEvents="false">
 
             <br.com.carlosrafaelgn.fplay.ui.BgButton
