--- a/res/layout/activity_browser_radio.xml
+++ b/res/layout/activity_browser_radio.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_marginLeft="8dp"
-            android:layout_toRightOf="@+id/btnGoBack">
+            android:layout_toRightOf="@+id/btnGoBack"
+            android:visibility="gone">
 
             <ProgressBar
                 android:id="@+id/barLoading"
