Improving overall UI on API +21 and fixed RadioStationView (a few devices draw an invalid character when a line ends or starts with characters like \n, \r and so on)

--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -9,6 +9,10 @@
         <!-- API 11 theme customizations can go here. -->
     </style>
 
+    <style name="AppBaseThemeDark" parent="@android:style/Theme.Holo.NoActionBar.Fullscreen">
+        <!-- API 11 theme customizations can go here. -->
+    </style>
+
     <style name="MenuDialog" parent="@android:style/Theme.Holo.Dialog">
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowIsTranslucent">true</item>
