--- a/res/values-v13/styles.xml
+++ b/res/values-v13/styles.xml
@@ -10,4 +10,8 @@
         <!-- API 13 theme customizations can go here. -->
     </style>
 
+    <style name="AppBaseThemeDark" parent="@android:style/Theme.Holo.NoActionBar.Fullscreen">
+        <!-- API 13 theme customizations can go here. -->
+    </style>
+
 </resources>
