--- a/res/values-v21/styles.xml
+++ b/res/values-v21/styles.xml
@@ -8,6 +8,14 @@
     -->
     <style name="AppBaseTheme" parent="@android:style/Theme.Material.Light.NoActionBar.Fullscreen">
         <!-- API 21 theme customizations can go here. -->
+        <item name="android:colorPrimary">#ff444abf</item>
+        <item name="android:colorAccent">#ff444abf</item>
+    </style>
+
+    <style name="AppBaseThemeDark" parent="@android:style/Theme.Material.NoActionBar.Fullscreen">
+        <!-- API 21 theme customizations can go here. -->
+        <item name="android:colorPrimary">#ff444abf</item>
+        <item name="android:colorAccent">#ff9ea6ff</item>
     </style>
 
     <style name="MenuDialog" parent="@android:style/Theme.Material.Dialog">
