--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -12,10 +12,25 @@
         -->
     </style>
 
+    <style name="AppBaseThemeDark" parent="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        <!--
+             Theme customizations available in newer API levels can go in res/values-vXX/styles.xml,
+			while customizations related to backward-compatibility can go here.
+        -->
+    </style>
+
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme">
         <!--
              All customizations that are NOT specific to a particular API-level 
+			can go here.
+        -->
+        <!-- <item name="android:soundEffectsEnabled">false</item> -->
+    </style>
+
+    <style name="AppThemeDark" parent="AppBaseThemeDark">
+        <!--
+             All customizations that are NOT specific to a particular API-level
 			can go here.
         -->
         <!-- <item name="android:soundEffectsEnabled">false</item> -->
