--- a/res/layout/activity_browser2.xml
+++ b/res/layout/activity_browser2.xml
@@ -108,11 +108,12 @@
 
     <TextView
         android:id="@+id/lblLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/lblPath"
+        android:gravity="center"
         android:maxLines="1"
-        android:paddingTop="22sp"
         android:text="@string/loading"
         android:visibility="gone"/>
 
