--- a/res/anim/fadein.xml
+++ b/res/anim/fadein.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<alpha xmlns:android="http://schemas.android.com/apk/res/android"
-       android:duration="200"
-       android:fillAfter="false"
-       android:fromAlpha="0.0"
-       android:interpolator="@android:anim/accelerate_decelerate_interpolator"
-       android:repeatCount="0"
-       android:toAlpha="1.0"/>
+<set xmlns:android="http://schemas.android.com/apk/res/android"
+     android:duration="200"
+     android:fillAfter="false"
+     android:shareInterpolator="true"
+     android:repeatCount="0"
+     android:interpolator="@android:anim/decelerate_interpolator">
+
+    <translate
+        android:fromYDelta="5%p"
+        android:toYDelta="0"/>
+
+    <alpha
+        android:fromAlpha="0.0"
+        android:toAlpha="1.0"/>
+</set>
