--- a/res/anim/fadeout.xml
+++ b/res/anim/fadeout.xml
@@ -1,16 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<set xmlns:android="http://schemas.android.com/apk/res/android"
-    android:duration="200"
-    android:fillAfter="false"
-    android:shareInterpolator="true"
-    android:repeatCount="0"
-    android:interpolator="@android:anim/accelerate_interpolator">
-
-    <translate
-        android:fromYDelta="0"
-        android:toYDelta="5%p"/>
-    
-    <alpha
-        android:fromAlpha="1.0"
-        android:toAlpha="0.0"/>
-</set>
+<alpha xmlns:android="http://schemas.android.com/apk/res/android"
+       android:duration="200"
+       android:fillAfter="false"
+       android:fromAlpha="1.0"
+       android:interpolator="@android:anim/accelerate_decelerate_interpolator"
+       android:repeatCount="0"
+       android:toAlpha="0.0"/>
