--- a/res/layout/activity_file_selection.xml
+++ b/res/layout/activity_file_selection.xml
@@ -40,9 +40,11 @@
 
     <TextView
         android:id="@+id/lblLoading"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/panelControls"
+        android:gravity="center"
         android:maxLines="1"
         android:text="@string/loading"
         android:visibility="gone"/>
