--- a/res/layout/notification.xml
+++ b/res/layout/notification.xml
@@ -14,7 +14,7 @@
         android:contentDescription="@string/fplay"
         android:padding="2dp"
         android:scaleType="centerInside"
-        android:src="@drawable/ic_launcher"/>
+        android:src="@mipmap/ic_launcher"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
