--- a/res/layout-sw500dp/activity_effects.xml
+++ b/res/layout-sw500dp/activity_effects.xml
@@ -59,6 +59,7 @@
         android:layout_height="match_parent"
         android:baselineAligned="false"
         android:orientation="horizontal"
+        android:gravity="center_vertical"
         android:splitMotionEvents="false"
         android:weightSum="5">
 
@@ -67,6 +68,7 @@
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginBottom="32dp"
+            android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginTop="32dp"
             android:layout_weight="3"
@@ -88,10 +90,10 @@
         <LinearLayout
             android:id="@+id/panelSecondary"
             android:layout_width="0dp"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginBottom="32dp"
             android:layout_marginLeft="16dp"
-            android:layout_marginRight="32dp"
+            android:layout_marginRight="16dp"
             android:layout_marginTop="32dp"
             android:layout_weight="2"
             android:baselineAligned="false"
@@ -137,7 +139,6 @@
                 android:id="@+id/barVirtualizer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="32dp"
                 android:nextFocusDown="@+id/btnMenu"
                 android:nextFocusForward="@+id/btnGoBack"
                 android:nextFocusLeft="@+id/chkVirtualizer"
