--- a/res/layout-v21/notification.xml
+++ b/res/layout-v21/notification.xml
@@ -11,7 +11,7 @@
         android:layout_height="64dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:contentDescription="@string/fplay"
+        android:contentDescription="@string/app_name"
         android:padding="2dp"
         android:scaleType="centerInside"
         android:src="@mipmap/ic_launcher"/>
