Adding a new build flavor: FPlay X, based on OpenSLPlayer -> https://github.com/h6ah4i/android-openslmediaplayer

--- a/res/layout/activity_about.xml
+++ b/res/layout/activity_about.xml
@@ -44,8 +44,9 @@
             android:layout_height="wrap_content"
             android:layout_alignBottom="@+id/imgIcon"
             android:layout_toLeftOf="@+id/imgIcon"
+            android:layout_marginRight="4dp"
             android:baselineAligned="true"
-            android:gravity="right|bottom"
+            android:gravity="bottom"
             android:orientation="horizontal">
 
             <TextView
