--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -56,7 +56,7 @@
         <item name="android:windowExitAnimation">@anim/dissolveout</item>
     </style>
 
-    <style name="MenuDialog" parent="@android:style/Theme.Dialog">
+    <style name="BgDialog" parent="@android:style/Theme.Dialog">
         <item name="android:windowBackground">@color/color_transparent</item>
         <item name="android:windowFrame">@null</item>
         <item name="android:windowContentOverlay">@null</item>
