--- a/res/values-v11/styles.xml
+++ b/res/values-v11/styles.xml
@@ -13,7 +13,7 @@
         <!-- API 11 theme customizations can go here. -->
     </style>
 
-    <style name="MenuDialog" parent="@android:style/Theme.Holo.Dialog">
+    <style name="BgDialog" parent="@android:style/Theme.Holo.Dialog">
         <item name="android:backgroundDimEnabled">true</item>
         <item name="android:windowIsTranslucent">true</item>
         <item name="android:windowNoTitle">true</item>
