--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -26,6 +26,11 @@
         <item name="android:windowExitAnimation">@null</item>
     </style>
 
+    <style name="ZoomFadeAnimation">
+        <item name="android:windowEnterAnimation">@anim/zoomfadein</item>
+        <item name="android:windowExitAnimation">@anim/zoomfadeout</item>
+    </style>
+
     <style name="SlideSmoothAnimation">
         <item name="android:windowEnterAnimation">@anim/slidein</item>
         <item name="android:windowExitAnimation">@anim/slideout</item>
